--- a/src/css/leave-application.css
+++ b/src/css/leave-application.css
@@ -363,6 +363,7 @@ input[type='radio']:checked
 
 .leave-application-form-link {
   text-decoration: underline;
+  transition: color var(--animation-fast);
 }
 
 .leave-application-form-link:hover,
