--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -88,12 +88,12 @@
       <p class="text">&#169;2023 English Excellence. All rights reserved.</p>
       <ul class="footer-bottom-list">
         <li class="footer-bottom-item">
-          <a class="link" href="./privacy-policy.html" target="_blank"
+          <a class="footer-bottom-item-link" href="./privacy-policy.html" target="_blank"
             >Privacy Policy</a
           >
         </li>
         <li class="footer-bottom-item">
-          <a class="link" href="" target="blank">Terms of Service</a>
+          <a class="footer-bottom-item-link" href="./privacy-policy.html" target="blank">Terms of Service</a>
         </li>
       </ul>
     </div>
