--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
 <header class="header" id="home">
   <div class="header-container container" id="header-top">
     <!-- Navigation -->
-    <a href="../index.html" class="header-logo"
+    <a href="./index.html" class="header-logo link"
       >english<span class="header-logo-span">excellence</span>.</a
     >
     <nav class="header-nav">
@@ -36,7 +36,7 @@
           aria-label="Facebook link"
         >
           <svg class="header-socials-icon" width="28" height="28">
-            <use href="../img/header/icons.svg#icon-facebook"></use>
+            <use href="./img/icons.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
@@ -49,7 +49,7 @@
           aria-label="Instagram link"
         >
           <svg class="header-socials-icon" width="28" height="28">
-            <use href="../img/header/icons.svg#icon-instagram"></use>
+            <use href="./img/icons.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
@@ -62,7 +62,7 @@
           aria-label="youtube link"
         >
           <svg class="header-socials-icon" width="24" height="24">
-            <use href="../img/header/icons.svg#icon-youtube"></use>
+            <use href="./img/icons.svg#icon-youtube"></use>
           </svg>
         </a>
       </li>
@@ -138,7 +138,7 @@
             aria-label="facebook icon"
           >
             <svg class="menu-socials-icon" width="28" height="28">
-              <use href="../img/icons.svg#icon-facebook"></use>
+              <use href="./img/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
@@ -151,7 +151,7 @@
             aria-label="instagram icon"
           >
             <svg class="menu-socials-icon" width="28" height="28">
-              <use href="../img/icons.svg#icon-instagram"></use>
+              <use href="./img/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
@@ -164,7 +164,7 @@
             aria-label="youtube icon"
           >
             <svg class="menu-socials-icon" width="28" height="28">
-              <use href="../img/icons.svg#icon-youtube"></use>
+              <use href="./img/icons.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
