fixed responsive styles for width < 375px

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,17 +1,20 @@
-.footer {
+.footer.section {
   background-color: var(--black);
-  padding: 40px 0 20px;
+  padding-top: 40px;
+  padding-bottom: 20px;
   color: var(--white);
+
+  text-align: left;
 }
 
 @media only screen and (min-width: 768px) {
-  .footer {
+  .footer.section {
     padding: 32px 0 16px;
   }
 }
 
 @media only screen and (min-width: 1280px) {
-  .footer {
+  .footer.section {
     padding: 64px 0 23px;
   }
 }
@@ -63,6 +66,12 @@
   display: flex;
   gap: 18px;
   margin-top: 14px;
+}
+
+@media only screen and (max-width: 374px) {
+  .footer-bottom {
+   font-size: 12px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
