--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" id="footer">
+<footer class="footer section" id="footer">
   <div class="container">
     <div class="footer-top">
       <div class="footer-wrap">
