--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -13,5 +13,6 @@
   --ultra-soft-white: rgba(255, 255, 255, 0.1);
   --medium-white: rgba(255, 255, 255, 0.6);
   --grey-bg-image: rgb(128, 127, 127);
+  --red: #ff3333;
   --animation-fast: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
