EDIT styles: - replace hero-header-english class and proposal-accent; - add global header-accent-color style; - add horizontal padding to .hero-button;

--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -4,8 +4,8 @@
     <h2 class="visually-hidden">Proposal to leave an application</h2>
 
     <strong class="proposal-appeal"
-      >Master the <span class="proposal-accent">Language</span> with Our English
-      Package!</strong
+      >Master the <span class="header-accent-color">Language</span> with Our
+      English Package!</strong
     >
 
     <div class="proposal-content-wrap">
