--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,7 +2,7 @@
   <div class="container hero-container">
     <h1 class="hero-header">
       Discover the joy of learning
-      <span class="hero-header-english">English</span> with us!
+      <span class="header-accent-color">English</span> with us!
     </h1>
 
     <a href="#leave-application" class="button hero-button"
