--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,6 +1,7 @@
 :root {
   --black: #121417;
   --soft-black: rgba(18, 20, 23, 0.5);
+  --ultra-soft-black: rgba(18, 20, 23, 0.1);
   --green: #4dc274;
   --pressed-green: #38ae5f;
   --ultra-soft-green: rgba(77, 194, 116, 0.1);
