fix our lessons

--- a/src/partials/our-lessons.html
+++ b/src/partials/our-lessons.html
@@ -10,9 +10,9 @@
     </p>
     <ul class="our-lessons-list">
       <li class="our-lessons-item">
-        <h3 class="our-lessons-item-title our-lessons-title-a black-color">
+        <p class="our-lessons-item-title our-lessons-title-a black-color">
           Practice
-        </h3>
+        </p>
         <p class="our-lessons-item-title our-lessons-title-price black-color">
           40$ / month
         </p>
@@ -26,7 +26,7 @@
         </button>
       </li>
       <li class="our-lessons-item">
-        <h3 class="our-lessons-item-title our-lessons-title-a">Standard</h3>
+        <p class="our-lessons-item-title our-lessons-title-a">Standard</p>
         <p class="our-lessons-item-title our-lessons-title-price">
           70$ / month
         </p>
@@ -40,9 +40,9 @@
         </button>
       </li>
       <li class="our-lessons-item">
-        <h3 class="our-lessons-item-title our-lessons-title-a black-color">
+        <p class="our-lessons-item-title our-lessons-title-a black-color">
           Individual
-        </h3>
+        </p>
         <p class="our-lessons-item-title our-lessons-title-price black-color">
           99$ / month
         </p>
