--- a/src/css/our-lessons.css
+++ b/src/css/our-lessons.css
@@ -56,7 +56,7 @@
 
 .our-lessons-button {
   padding: 14px 76px;
-  border: 1px solid rgba(255, 255, 255, 0.4);
+  border: 1px solid var(--soft-gray);
   min-width: 256px;
   border-radius: 12px;
   font-size: 14px;
