--- a/src/partials/our-teachers.html
+++ b/src/partials/our-teachers.html
@@ -1,5 +1,5 @@
 <!-- OUR TEACHERS -->
-<section id="teachers" class="section">
+<section id="teachers" class="section reveal fade-right">
   <div class="container">
     <h2 class="section-title">
       Meet our <span class="section-title-accent">teachers</span>
