--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -1,5 +1,5 @@
 <!-- PROPOSAL TO LEAVE AN APPLICATION  -->
-<section class="section proposal-section">
+<section class="section proposal-section reveal fade-left">
   <div class="container proposal-container">
     <h2 class="visually-hidden">Proposal to leave an application</h2>
 
