--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,5 @@
 <!-- REVIEWS -->
-<section id="reviews" class="reviews section">
+<section id="reviews" class="reviews section reveal fade-right">
   <div class="container">
     <h2 class="section-title">
       What our <span class="section-title-accent">students</span> say
