--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -15,4 +15,5 @@
   --grey-bg-image: rgb(128, 127, 127);
   --red: #ff3333;
   --animation-fast: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --animation-reveal: 500ms cubic-bezier(0.22, -0.03, 0.36, 1.4);
 }
