--- a/src/partials/leave-application.html
+++ b/src/partials/leave-application.html
@@ -1,4 +1,7 @@
-<section class="leave-application section" id="leave-application">
+<section
+  class="leave-application section reveal fade-left"
+  id="leave-application"
+>
   <div class="container">
     <div class="leave-application-heading">
       <h2 class="leave-application-heading-title with-accent">
