ADD animation classes to our-lessons section

--- a/src/partials/our-lessons.html
+++ b/src/partials/our-lessons.html
@@ -1,4 +1,4 @@
-<section class="section" id="our-lessons">
+<section class="section reveal fade-right" id="our-lessons">
   <div class="container">
     <h2 class="section-title">
       Our <span class="section-title-accent">lessons</span>
