--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<section class="about-section section reveal fade-left" id="about">
+<section class="about-section section reveal fade-left" id="about-us">
   <div class="container">
     <h2 class="section-title">About <span class="accent">Us</span></h2>
     <p class="about-section-text">
