updated footer anchor links

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -32,7 +32,7 @@
             <a href="#about-us" class="footer-item">About us</a>
           </li>
           <li class="footer-list-item">
-            <a href="#lessons" class="footer-item">Our lessons</a>
+            <a href="#our-lessons" class="footer-item">Our lessons</a>
           </li>
           <li class="footer-list-item">
             <a href="#teachers" class="footer-item">Teachers</a>
@@ -41,7 +41,7 @@
             <a href="#reviews" class="footer-item">Reviews</a>
           </li>
           <li class="footer-list-item">
-            <a href="#contact" class="footer-item">Contact us</a>
+            <a href="#leave-application" class="footer-item">Contact us</a>
           </li>
         </ul>
       </nav>
