--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <!--HEADER-->
-<header class="header" id="home">
-  <div class="header-container container">
+<header class="header-section" id="home">
+  <div class="container header-container">
     <!-- Navigation -->
     <a href="./index.html" class="header-logo link"
       >english<span class="header-logo-span">excellence</span>.</a
@@ -22,7 +22,9 @@
           <a class="header-nav-link-four" href="#reviews">Reviews</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link-five" href="#leave-application">Contact Us</a>
+          <a class="header-nav-link-five" href="#leave-application"
+            >Contact Us</a
+          >
         </li>
       </ul>
     </nav>
