--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,7 +31,7 @@
     <ul class="header-socials-list">
       <li class="header-socials-item">
         <a
-          class="header-socials-link link"
+          class="header-socials-link"
           href="https://facebook.com"
           target="_blank"
           rel="noopener noreferrer"
@@ -44,7 +44,7 @@
       </li>
       <li class="header-socials-item">
         <a
-          class="header-socials-link link"
+          class="header-socials-link"
           href="https://instagram.com"
           target="_blank"
           rel="noopener noreferrer"
@@ -57,7 +57,7 @@
       </li>
       <li class="header-socials-item">
         <a
-          class="header-socials-link link"
+          class="header-socials-link"
           href="https://youtube.com"
           target="_blank"
           rel="noopener noreferrer"
