--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,19 +10,19 @@
 
       <ul class="header-nav-list">
         <li class="header-nav-item">
-          <a class="header-nav-link-one" href="#about-us">About us</a>
+          <a class="header-nav-link" href="#about-us">About us</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link-two" href="#our-lessons">Our lessons</a>
+          <a class="header-nav-link" href="#our-lessons">Our lessons</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link-three" href="#teachers">Teachers</a>
+          <a class="header-nav-link" href="#teachers">Teachers</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link-four" href="#reviews">Reviews</a>
+          <a class="header-nav-link" href="#reviews">Reviews</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link-five" href="#leave-application"
+          <a class="header-nav-link" href="#leave-application"
             >Contact Us</a
           >
         </li>
