--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,6 +1,8 @@
 <section class="about-section section reveal fade-left" id="about-us">
   <div class="container">
-    <h2 class="section-title">About <span class="accent">Us</span></h2>
+    <h2 class="section-title">
+      About <span class="section-title-accent">Us</span>
+    </h2>
     <p class="about-section-text">
       We are dedicated to providing engaging and effective English language
       courses in a supportive and stimulating learning environment
