--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -93,7 +93,7 @@
   </div>
   <!-- Mobile Menu container -->
   <div
-    class="mobile-backdrop js-menu-container"
+    class="mobile-backdrop js-menu-container js-close-menu"
     id="mobile-menu"
     data-menu-backdrop
   >
@@ -113,19 +113,19 @@
       <div class="menu-nav">
         <ul class="menu-nav-list">
           <li class="menu-nav-item">
-            <a class="menu-nav-link" href="#about-us">About us</a>
+            <a class="menu-nav-link js-close-menu" href="#about-us">About us</a>
           </li>
           <li class="menu-nav-item">
-            <a class="menu-nav-link" href="#our-lessons">Our lessons</a>
+            <a class="menu-nav-link js-close-menu" href="#our-lessons">Our lessons</a>
           </li>
           <li class="menu-nav-item">
-            <a class="menu-nav-link" href="#teachers">Teachers</a>
+            <a class="menu-nav-link js-close-menu" href="#teachers">Teachers</a>
           </li>
           <li class="menu-nav-item">
-            <a class="menu-nav-link" href="#reviews">Reviews</a>
+            <a class="menu-nav-link js-close-menu" href="#reviews">Reviews</a>
           </li>
           <li class="menu-nav-item">
-            <a class="menu-nav-link" href="#leave-section">Contact Us</a>
+            <a class="menu-nav-link js-close-menu" href="#leave-application">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -133,7 +133,7 @@
       <ul class="menu-socials-list">
         <li class="menu-socials-item">
           <a
-            class="menu-socials-link"
+            class="menu-socials-link js-close-menu"
             href="https://facebook.com"
             target="_blank"
             rel="noopener noreferrer"
@@ -146,7 +146,7 @@
         </li>
         <li class="menu-socials-item">
           <a
-            class="menu-socials-link"
+            class="menu-socials-link js-close-menu"
             href="https://instagram.com"
             target="_blank"
             rel="noopener noreferrer"
@@ -159,7 +159,7 @@
         </li>
         <li class="menu-socials-item">
           <a
-            class="menu-socials-link"
+            class="menu-socials-link js-close-menu"
             href="https://youtube.com"
             target="_blank"
             rel="noopener noreferrer"
