EDIT styles and animation: - add overflow:hidden to body to prevent horizontal scroll; - edit animation function; - add reveal active class to about-us section (for animation)

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<section class="about-section section reveal fade-left" id="about-us">
+<section class="about-section section reveal active fade-left" id="about-us">
   <div class="container">
     <h2 class="section-title">
       About <span class="section-title-accent">Us</span>
