--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -14,7 +14,11 @@
       <div class="proposal-list-wrap">
         <ul class="proposal-list">
           <li class="proposal-list-item">
-            <div class="proposal-list-item-icon"></div>
+            <div class="proposal-list-item-icon">
+              <svg class="proposal-list-item-icon-check" width="12" height="12">
+                <use href="./img/icons.svg#icon-check"></use>
+              </svg>
+            </div>
             <p class="proposal-list-item-text">
               Dive into captivating lessons designed to stimulate your
               curiosity.
@@ -22,7 +26,11 @@
           </li>
 
           <li class="proposal-list-item">
-            <div class="proposal-list-item-icon"></div>
+            <div class="proposal-list-item-icon">
+              <svg class="proposal-list-item-icon-check" width="12" height="12">
+                <use href="./img/icons.svg#icon-check"></use>
+              </svg>
+            </div>
             <p class="proposal-list-item-text">
               Learn in a nurturing setting where every student's progress
               matters.
@@ -30,7 +38,11 @@
           </li>
 
           <li class="proposal-list-item">
-            <div class="proposal-list-item-icon"></div>
+            <div class="proposal-list-item-icon">
+              <svg class="proposal-list-item-icon-check" width="12" height="12">
+                <use href="./img/icons.svg#icon-check"></use>
+              </svg>
+            </div>
             <p class="proposal-list-item-text">
               Experience the satisfaction of real progress as your language
               skills and confidence grow with every session.
