--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,26 +2,17 @@
   <div class="container">
     <div class="footer-top">
       <div class="footer-wrap">
-        <a href="index.html" class="footer-logo"
-          >english<span class="footer-item-accent">excellence</span>.</a
-        >
+        <a href="index.html" class="footer-logo">english<span class="footer-item-accent">excellence</span>.</a>
         <address class="footer-address">
           <ul class="footer-list">
             <li class="footer-list-item">
               <p class="item-title">Phone number:</p>
-              <a href="tel:+380684439426" class="footer-item"
-                >+380 (68) 443-94-26</a
-              >
+              <a href="tel:+380684439426" class="footer-item">+380 (68) 443-94-26</a>
             </li>
             <li class="footer-list-item">
               <p class="item-title">Address:</p>
-              <a
-                href="https://maps.app.goo.gl/bPwTf8E8XLwf26PZ7"
-                target="_blank"
-                rel="external"
-                class="footer-item"
-                >32a M. Bazhana ave</a
-              >
+              <a href="https://maps.app.goo.gl/bPwTf8E8XLwf26PZ7" target="_blank" rel="external" class="footer-item">32a
+                M. Bazhana ave</a>
             </li>
           </ul>
         </address>
@@ -47,36 +38,23 @@
       </nav>
       <ul class="footer-social">
         <li>
-          <a
-            href="https://www.facebook.com/goITclub/"
-            class="footer-social-item"
-            rel="noopener noreferrer"
-            target="_blank"
-          >
+          <a href="https://www.facebook.com/goITclub/" class="footer-social-item" rel="noopener noreferrer"
+            target="_blank">
             <svg class="footer-icon" width="26" height="26">
               <use href="./img/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li>
-          <a
-            href="https://www.instagram.com/goitclub/"
-            class="footer-social-item"
-            rel="noopener noreferrer"
-            target="_blank"
-          >
+          <a href="https://www.instagram.com/goitclub/" class="footer-social-item" rel="noopener noreferrer"
+            target="_blank">
             <svg class="footer-icon" width="26" height="26">
               <use href="./img/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li>
-          <a
-            href="https://www.youtube.com/c/GoIT"
-            class="footer-social-item"
-            rel="noopener noreferrer"
-            target="_blank"
-          >
+          <a href="https://www.youtube.com/c/GoIT" class="footer-social-item" rel="noopener noreferrer" target="_blank">
             <svg class="footer-icon" width="26" height="26">
               <use href="./img/icons.svg#icon-youtube"></use>
             </svg>
@@ -88,12 +66,10 @@
       <p class="text">&#169;2023 English Excellence. All rights reserved.</p>
       <ul class="footer-bottom-list">
         <li class="footer-bottom-item">
-          <a class="footer-bottom-item-link" href="./privacy-policy.html" target="_blank"
-            >Privacy Policy</a
-          >
+          <a class="footer-bottom-item-link" href="./privacy-policy.html" target="_blank">Privacy Policy</a>
         </li>
         <li class="footer-bottom-item">
-          <a class="footer-bottom-item-link" href="./privacy-policy.html" target="blank">Terms of Service</a>
+          <a class="footer-bottom-item-link" href="./privacy-policy.html" target="_blank">Terms of Service</a>
         </li>
       </ul>
     </div>
