--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -33,3 +33,10 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
