--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -9,14 +9,9 @@
   }
 }
 
-@media screen and (min-width: 768px) {
-  .hero.section {
-    padding-top: 0px;
-  }
-}
 @media only screen and (min-width: 1280px) {
   .hero.section {
-    padding: 0px 0 21px;
+    padding-bottom: 21px;
   }
 }
 
@@ -95,7 +90,7 @@
 
 @media screen and (min-width: 768px) {
   .hero-container {
-    padding: 260px 32px 295px 32px;
+    padding: 260px 32px 295px;
     border-radius: 30px;
   }
 }
