--- a/src/partials/our-lessons.html
+++ b/src/partials/our-lessons.html
@@ -21,9 +21,7 @@
           collaborative language exercises and group activities, boosting their
           conversational skills and confidence in using English.
         </p>
-        <button class="our-lessons-button" type="button">
-          Leave an application
-        </button>
+        <a href="#leave-application" class="our-lessons-button">Leave an application</a>
       </li>
       <li class="our-lessons-item">
         <p class="our-lessons-item-title our-lessons-title-a">Standard</p>
@@ -35,9 +33,7 @@
           all key areas of English language - reading, writing, listening, and
           speaking. It is a set of basic knowledge and skills.
         </p>
-        <button class="our-lessons-secondary-button" type="button">
-          Leave an application
-        </button>
+        <a href="#leave-application" class="our-lessons-secondary-button">Leave an application</a>
       </li>
       <li class="our-lessons-item">
         <p class="our-lessons-item-title our-lessons-title-a black-color">
@@ -51,9 +47,7 @@
           instruction that focuses on a learner's specific language goals and
           challenges, offering personal feedback.
         </p>
-        <button class="our-lessons-button" type="button">
-          Leave an application
-        </button>
+        <a href="#leave-application" class="our-lessons-button">Leave an application</a>
       </li>
     </ul>
   </div>
