--- a/src/css/header.css
+++ b/src/css/header.css
@@ -304,7 +304,7 @@ Mobile Menu
   right: 0;
 
   width: 240px;
-  height: 100vh;
+  height: 100%;
   padding: 20px;
 
   background-color: var(--green);
