--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,10 @@
 <header class="header-section" id="home">
   <div class="container header-container">
     <!-- Navigation -->
-    <a href="./index.html" class="header-logo link"
+    <a
+      href="./index.html"
+      class="header-logo link"
+      aria-label="Go to the Homepage"
       >english<span class="header-logo-span">excellence</span>.</a
     >
     <nav class="header-nav">
@@ -22,9 +25,7 @@
           <a class="header-nav-link" href="#reviews">Reviews</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link" href="#leave-application"
-            >Contact Us</a
-          >
+          <a class="header-nav-link" href="#leave-application">Contact Us</a>
         </li>
       </ul>
     </nav>
@@ -116,7 +117,9 @@
             <a class="menu-nav-link js-close-menu" href="#about-us">About us</a>
           </li>
           <li class="menu-nav-item">
-            <a class="menu-nav-link js-close-menu" href="#our-lessons">Our lessons</a>
+            <a class="menu-nav-link js-close-menu" href="#our-lessons"
+              >Our lessons</a
+            >
           </li>
           <li class="menu-nav-item">
             <a class="menu-nav-link js-close-menu" href="#teachers">Teachers</a>
@@ -125,7 +128,9 @@
             <a class="menu-nav-link js-close-menu" href="#reviews">Reviews</a>
           </li>
           <li class="menu-nav-item">
-            <a class="menu-nav-link js-close-menu" href="#leave-application">Contact Us</a>
+            <a class="menu-nav-link js-close-menu" href="#leave-application"
+              >Contact Us</a
+            >
           </li>
         </ul>
       </div>
