--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,7 +8,11 @@
     <a href="#leave-application" class="button hero-button"
       >Leave an application</a
     >
-    <a href="#footer" class="scroll-to-bottom">
+    <a
+      href="#footer"
+      class="scroll-to-bottom"
+      aria-label="Scroll to the bottom of the page"
+    >
       <svg class="scroll-to-bottom-icon" width="20" height="20">
         <use href="./img/icons.svg#icon-scroll"></use>
       </svg>
